--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img class="logo" src= /Users/sumeya.ali/Sprint-Challenge--User-Interface/img/lambda-black.png> 
                     <div>
                     <a href="#">Home</a>
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                     <a href="#">Products</a>
                     <a href="#">Blog</a>
                     <a href="#">Contact</a>
