--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <nav class="top">
             <img class="logo" src= /Users/sumeya.ali/Sprint-Challenge--User-Interface/img/lambda-black.png> 
             <div>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">About</a>
             <a href="#">Products</a>
             <a href="#">Blog</a>
